# botuk_zigbee

./: CMakeLists.txt  Dockerfile  README.md  prod_devices.csv  settings.conf  zigbee2mqtt_version.txt
components/bsec/: CMakeLists.txt
components/update_cluster/: CMakeLists.txt  builtin_light_flash.c  bvoc_measurement.c  co2_measurement.c  current_time.c  gas_resistance_measurement.c  humidity_measurement.c  iaq_measurement.c  pressure_measurement.c  temp_measurement.c  waterleak_check.c
components/update_cluster/include/: update_cluster.h
homeassistant-zigbee2mqtt/: ESP32H2_Sensor_00000.js  ESP32H2_Sensor_00000_127.js  ESP32H2_Sensor_00000_257.js  ESP32H2_Sensor_16384.js  ESP32H2_Sensor_16384_127.js  ESP32H2_Sensor_16384_257.js  ESP32H2_Sensor_16512_127.js  ESP32H2_Sensor_16512_128.js  ESP32H2_Sensor_16512_257.js  ESP32H2_Sensor_16512_258.js  ESP32H2_Sensor_30976.js  ESP32H2_Sensor_30976_127.js  ESP32H2_Sensor_30976_257.js  ESP32H2_Sensor_31488.js  ESP32H2_Sensor_31488_127.js  ESP32H2_Sensor_31488_257.js  ESP32H2_Sensor_33280_127.js  ESP32H2_Sensor_33280_257.js  ESP32H2_Sensor_37888.js  ESP32H2_Sensor_49152.js  ESP32H2_Sensor_49152_127.js  ESP32H2_Sensor_49152_257.js  ESP32H2_Sensor_49664_127.js  ESP32H2_Sensor_49664_257.js  ESP32H2_Sensor_50176.js  ESP32H2_Sensor_50176_127.js  ESP32H2_Sensor_50176_257.js  ESP32H2_Sensor_50304.js  ESP32H2_Sensor_50304_123.js  ESP32H2_Sensor_50304_124.js  ESP32H2_Sensor_50304_125.js  ESP32H2_Sensor_50304_126.js  ESP32H2_Sensor_50304_127.js  ESP32H2_Sensor_52352.js  ESP32H2_Sensor_52352_127.js  ESP32H2_Sensor_52352_257.js  (+21 more)
(+45 files in other folders)
